<resources>

    <!-- Sign UP/Sign In Titles -->
    <string name="app_name">CHENGAPP</string>
    <string name="login">تسجيل الدخول</string>
    <string name="logout">Log Out</string>
    <string name="signup">إنشاء حساب</string>
    <string name="userName">اسم المستخدم</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="password">كلمة السر</string>
    <string name="logo_desc">this is the app logo (Towing truck)</string>
    <string name="exit">خروج</string>
    <string name="password_hint">أدخل كلمة السر</string>
    <string name="login_hint">أدخل اسم المستخدم</string>
    <string name="show_hide_button">show/hide button</string>
    <string name="welcome_text">مرحبا بك %s</string>
    <string name="signUp">إنشاء حساب</string>
    <string name="email_hint">أدخل البريد الإلكتروني</string>
    <string name="repeat_password_hint">إعادة إدخال كلمة السر</string>
    <string name="terms">أقبل بأحكام و شروط التطبيق </string>
    <string name="registerText">ليس لديك حساب ? إنشئ حسابك الأن  </string>

    <!-- Profile Titles -->
    <string name="cin_hint">أدخل رقم بطاقة التعريف الوطنية(8 أرقام)</string>
    <string name="phone_hint">أدخل رقم الهاتف الجوال(8 أرقام)</string>
    <string name="matricule_hint"> أدخل رقم لوحة السيارة (999TN9999)</string>
    <string name="matricule_Text">رقم لوحة السيارة</string>
    <string name="phone_text">رقم الهاتف الجوال</string>
    <string name="cin_text">رقم بطاقة التعريف الوطنية</string>


    <!-- Report Titles -->
    <string name="btnReport">تبليغ على مخالفة</string>
    <string name="listReports">لائحة البلاغات السابقة </string>
    <string name="formText">إبلاغ على مخالفة</string>
    <string name="typeText">نوعية المخالفة</string>
    <string name="accident">حادت</string>
    <string name="parking">توقف مخالف للقانون</string>
    <string name="other">نوع أخر</string>
    <string name="photo">خذ صورة</string>
    <string name="description">حاول تفسير نوعية المخالفة</string>
    <string name="desription_hint">حاول تفسير نوعية المخالفة</string>
    <string name="sendReport">إرسال البلاغ</string>
    <string name="profile">تحديث الحساب</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="backList">الرجوع</string>
    <string name="positionVerif"> position verified </string>

    <!-- bottom nav bar -->
    <string name="home">إستقبال</string>
    <string name="aboutUs">تعرف</string>
    <string name="logOut">الخروج</string>
    <string name="notif">تنبيه</string>

    <!-- About us activity -->
    <string name="aboutUsText">تعرف المزيد</string>
    <string name="multiLineText">تعرف المزيد (to be added later on)</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>