<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <Button
        android:id="@+id/addProfile"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/button_round"
        android:drawableStart="@drawable/send"
        android:drawableLeft="@drawable/send"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/profile"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876" />

    <EditText
        android:id="@+id/matriculeId"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/edit_round"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/matricule_hint"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

    <EditText
        android:id="@+id/phoneId"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/edit_round"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387" />

    <EditText
        android:id="@+id/cinId"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/edit_round"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/cin_hint"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />
</androidx.constraintlayout.widget.ConstraintLayout>